2004-01-07  MINAMI Hirokazu  <minami@mistfall.net>

	* xwindow/x_main_config.c: minor bugfix.
	* xwindow/x_font_manager.c: fixed segv when changing font size
	using escape sequence.

2004-01-06  MINAMI Hirokazu  <minami@mistfall.net>

	* mlterm/ml_vt100_parser.c: replaced magic constant "20" by DIGIT_STR_LEN(int).
	* xwindow/x_screen.c: mod_meta_mode = 8bit (set MSB) was not working. fixed.

2004-01-05  Seiichi SATO  <ssato@sh.rim.or.jp>

	* mlterm/ml_edit.c (cursor_goto_intern): If requested row is larger
	than terminal size, round it to end of row.

2004-01-03  MINAMI Hirokazu  <minami@mistfall.net>

	* xwindow/x_main.config.c: type_engine was not initialized when
	no option had been specified. fixed.

	* xwindow/x_font_cache.c: "font_name_list" should not be accessed
	after realloc.

	* xwindow/x_window.c: #ifdef'ed not-yet-implemented features.

2003-12-30  Araki Ken  <arakiken@users.sf.net>

	* Core X Font Subsystem can be removed by --with-type-engines=xft.

2003-12-28  MINAMI Hirokazu  <minami@mistfall.net>

	* xwindow/x_screen.c: reverted the last change.

2003-12-28  MINAMI Hirokazu  <minami@mistfall.net>

	* configure.in, configure: changed VERSION from 2.7.0->2.8.0
	* xwindow/x_screen.c: fixed segv (use_anti_alias should do nothing
	 when USE_TYPE_XFT is not defined).

2003-12-27  Seiichi SATO  <ssato@sh.rim.or.jp>

	* tool/mlconfig/main.c: ANTI_ALIAS -> USE_TYPE_XFT

2003-12-27  Seiichi SATO  <ssato@sh.rim.or.jp>

	* If confiugre detects that pkg-config and xft2 library are available,
	  define USE_TYPE_XFT.

2003-12-27  Araki Ken  <arakiken@users.sf.net>

	* Added --type-engines option to configure and obsoleted --anti-alias option.
	* Added -*,--type,type_engine option to mlterm.
	  You can specify which engine you use, xcore or xft.

2003-12-27  Seiichi SATO  <ssato@sh.rim.or.jp>

	* mlterm/ml_pty_win32.c: cleaned up error handling.
	* updated config.sub and config.guess. (timestamp='2003-10-07')

2003-12-25  MINAMI Hirokazu  <minami@mistfall.net>
